Fixed overlap issue on reset view button

--- a/src/components/modules/ScrollSection.module.css
+++ b/src/components/modules/ScrollSection.module.css
@@ -1090,7 +1090,7 @@ h2 {
   position: fixed;
   top: 0;
   left: 0;
-  height: 14%;
+  height: 10%;
   z-index: 1000;
   display: flex;
   align-items: center;
